Fixed contrast of links in light mode

--- a/app/assets/scss/theme/_palette.scss
+++ b/app/assets/scss/theme/_palette.scss
@@ -17,7 +17,7 @@ $grey--darker: oklch(0.3, 0, 0);
 $grey--dark: oklch(0.35, 0, 0);
 $grey--darkish: oklch(0.4, 0, 0);
 
-$orange--light: oklch(0.8 0.2 70);
+$orange--light: oklch(0.55 0.13 70);
 $orange--dark: oklch(0.7 0.15 70);
 
 $blue--light: oklch(0.27 0.3 225);
